--- a/src/index.html
+++ b/src/index.html
@@ -160,14 +160,14 @@
           ><p class="link-bottom-sp__text">商談予約フォーム</p></a
         >
       </div>
-      <a
+      <!-- <a
         href="https://www.jicoo.com/t/s-pri/e/Hv0LKGxM"
         target="_blank"
         rel="noopener noreferrer"
         class="banner"
       >
         <img src="assets/images/common/pc-banner.jpg" alt="バナーの画像" />
-      </a>
+      </a> -->
       <div class="Contact-information">
         <div class="Contact-information__inner">
           <p class="Contact-information__text">お電話でのお問い合わせ</p>
@@ -1929,4 +1929,18 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
+  <!-- Start of AvacomWidget Code -->
+<script type="text/javascript">
+  (function () {
+  window._avacomWidget = window._avacomWidget || {};
+  window._avacomWidget.api_key = 'xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx';
+  // window._avacomWidget.image = '';
+  // window._avacomWidget.width = 200;
+  // window._avacomWidget.height = 160;
+  // window._avacomWidget.right = 0;
+  // window._avacomWidget.bottom = 0;
+  })();
+  </script>
+  <script async src="https://avatar.avitachat.com/js/AvacomWidget.js"></script>
+  <!-- End of AvacomWidget Code -->
 </html>
